<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_products"
            android:icon="@drawable/ic_all"
            android:title="@string/string_main_drawer_all" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/string_main_drawer_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/string_main_drawer_settings" />
    </group>

    <item android:title="@string/string_main_drawer_credits">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/string_main_drawer_about" />
        </menu>
    </item>

</menu>
