<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/string_about_cd_icon"
            android:padding="16dp"
            android:src="@drawable/ic_main_donut" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/About.normalText"
            android:padding="8dp"
            android:text="@string/string_about_one"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:theme="@style/About.normalText"
            android:text="@string/string_about_two"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:padding="8dp"
            android:text="@string/string_about_wip"
            android:theme="@style/About.Artist" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:theme="@style/About.normalText"
            android:text="@string/string_about_three"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/string_about_protonmail"
            android:textColorLink="@color/colorPrimaryExtraDark"
            android:theme="@style/About.Artist" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="8dp"
            android:text="@string/string_about_four"
            android:textColorLink="@color/colorPrimaryExtraDark"
            android:theme="@style/About.normalText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="4dp"
                android:text="@string/string_about_freepik"
                android:textColorLink="@color/colorPrimaryExtraDark"
                android:theme="@style/About.Artist" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="4dp"
                android:text="@string/string_about_smash"
                android:textColorLink="@color/colorPrimaryExtraDark"
                android:theme="@style/About.Artist" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/string_about_licence"
            android:textColorLink="@color/colorPrimaryExtraDark"
            android:theme="@style/About.Licence" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingStart="2dp"
            android:paddingBottom="24dp"
            android:theme="@style/About.Licence"
            android:autoLink="web"
            android:text="@string/string_about_licence_cc"
            android:textColorLink="@color/colorPrimaryExtraDark" />
    </LinearLayout>
</ScrollView>