<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/intro_ll_slide_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_slider_screen3"
    android:orientation="vertical"
    android:theme="@style/AppIntro">

    <TextView
        style="@style/AppIntro.SlideSubtitle"
        android:id="@+id/intro_tv_slide_three_subtitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/string_intro_user_data"
        android:text="@string/string_intro_user_data" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                style="@style/AppIntro.RadioGroupText"
                android:id="@+id/intro_tv_slide_three_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/string_intro_info_genre"
                android:text="@string/string_intro_info_genre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/intro_rg_slide_three_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:gravity="center|left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/intro_tv_slide_three_genre"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/intro_rb_slide_three_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/string_intro_info_female"
                    android:text="@string/string_intro_info_female"
                    android:checked="true"
                    style="@style/AppIntro.RadioButton"/>

                <RadioButton
                    android:id="@+id/intro_rb_slide_three_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/string_intro_info_male"
                    android:text="@string/string_intro_info_male"
                    style="@style/AppIntro.RadioButton"/>
            </RadioGroup>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/intro_til_slide_three_height"
                style="@style/AppIntro.TextInputLayoutThree"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:theme="@style/AppIntro.TextInputLayoutThree">

                <EditText
                    android:id="@+id/intro_et_slide_three_height"
                    style="@style/AppIntro.TextInputEditTextThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_settings_height"
                    android:inputType="number"
                    android:maxLength="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/intro_til_slide_three_height_inches"
                style="@style/AppIntro.TextInputLayoutThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:visibility="gone"
                android:theme="@style/AppIntro.TextInputLayoutThree"
                app:hintTextAppearance="@style/AppIntro.TextInputLayoutThree.FocusedHint">

                <EditText
                    android:id="@+id/intro_et_slide_three_height_inches"
                    style="@style/AppIntro.TextInputEditTextThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:maxLength="2" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/intro_til_slide_three_weight"
                style="@style/AppIntro.TextInputLayoutThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppIntro.TextInputLayoutThree"
                app:hintTextAppearance="@style/AppIntro.TextInputLayoutThree.FocusedHint">

                <EditText
                    android:id="@+id/intro_et_slide_three_weight"
                    style="@style/AppIntro.TextInputEditTextThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/string_settings_weight"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:maxLength="3"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/AppIntro.RadioGroupText"
                android:id="@+id/intro_tv_slide_three_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/string_intro_switch_unit_cd"
                android:text="@string/strings_intro_units_text"
                android:layout_alignParentLeft="true"/>

            <android.support.v7.widget.SwitchCompat
                style="@style/AppIntro.Switch"
                android:theme="@style/AppIntro.SwitchTheme"
                android:id="@+id/intro_sw_slide_three_units"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/string_intro_switch_unit_cd"
                android:text="@string/string_intro_switch_unit_me"
                android:textSize="16sp"
                android:textOff="@string/string_intro_switch_unit_me"
                android:textOn="@string/string_intro_switch_unit_im"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>