<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dtapps.sugarcop.SettingsActivity">
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView_settings">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/settings_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccentExtraDark"
                app:title="@string/string_settings_toolbar_title"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/settings_tv_info_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_info"
                        android:theme="@style/Settings.TitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <TextView
                        android:id="@+id/settings_tv_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_name"
                        android:theme="@style/Settings.SubtitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <View
                        android:id="@+id/details_divider_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>

                    <TextView
                        android:id="@+id/settings_tv_info_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_surname"
                        android:theme="@style/Settings.SubtitleText" />

                    <View
                        android:id="@+id/details_divider_info_surname"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>

                    <TextView
                        android:id="@+id/settings_tv_info_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_age"
                        android:theme="@style/Settings.SubtitleText" />

                    <View
                        android:id="@+id/details_divider_info_age"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_body_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_body"
                        android:theme="@style/Settings.TitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <TextView
                        android:id="@+id/settings_tv_body_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_height"
                        android:theme="@style/Settings.SubtitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <View
                        android:id="@+id/details_divider_body_height"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>

                    <TextView
                        android:id="@+id/settings_tv_body_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_weight"
                        android:theme="@style/Settings.SubtitleText" />

                    <View
                        android:id="@+id/details_divider_body_weight"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_sugar_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_sugar"
                        android:theme="@style/Settings.TitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <TextView
                        android:id="@+id/settings_tv_body_sugar_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_settings_maximun_sugar"
                        android:theme="@style/Settings.SubtitleText"
                        tools:layout_editor_absoluteX="111dp"
                        tools:layout_editor_absoluteY="75dp" />

                    <View
                        android:id="@+id/details_divider_sugar_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:theme="@style/AppTheme.Divider"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextLight"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-1585893575818828/4994218726"/>
</android.support.constraint.ConstraintLayout>